# Dots-calculation-service-template

./: Dockerfile  README.md  README.md.orig  build_and_push_image_dockerhub.sh  code_gen.py  pyproject.toml  requirements.txt  template-instructions.md
.github/workflows/: publish-image.yml  python-app.yml
src/: main.py
src/ExampleCalculationService/: CalculationServiceTest.py  EConnection.py  calculation_service_test.py
src/example_package_YOUR_PACKAGE_NAME_HERE/: example_package_YOUR_PACKAGE_NAME_HERE.py
src/service_a/: service_a_calc.py
src/service_b/: service_b_calc.py
test/: TestTemplate.py  test_template.py
