[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ExampleCalculationService"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
dependencies = [
  'helics==3.4.0',
  'dots_infrastructure==0.0.6'
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"